fix scroll animation on mobile devises

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -72,6 +72,7 @@ a {
   background-color: #f3603c;
 }
 body {
+  overflow-x: hidden;
   font-family: "Be Vietnam Pro", sans-serif;
   header {
     padding-top: #{calc($section-padding / 2)}px;
@@ -168,7 +169,7 @@ body {
     }
   }
   main {
-    padding-top: #{$section-padding}px;
+    padding-top: #{calc($section-padding / 2)}px;
     padding-bottom: #{$section-padding}px;
     .container {
       display: flex;
